--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salilvnair/tspa",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/salilvnair/tspa.git"
@@ -11,11 +11,11 @@
     "persistent api"
   ],
   "description": "Typescript Persistent Api Repository",
-  "main": "tspa/public_api.js",
-  "types": "tspa/public_api.d.ts",
+  "main": "dist/public_api.js",
+  "types": "dist/public_api.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "node ./tspa/test/test.js"
+    "test": "node ./dist/test/main.js"
   },
   "author": "Salil V Nair",
   "license": "MIT",
@@ -25,6 +25,6 @@
     "reflect-metadata": "^0.1.13"
   },
   "files": [
-    "tspa/**/*"
+    "dist/**/*"
   ]
 }
